# marco_pharma

./: .gitignore  .replit  ADAPTATION_ARGON_RESUME.md  ANALYSE_COMPLETE_FINALE.md  ARGON_INTEGRATION_COMPLETE.md  COMPARAISON_PHARMASTOCK_VS_MARCO.md  CONNEXION.txt  CONVERSION_BS5_TO_ARGON.md  CORRECTIONS_APPLIQUEES.md  CORRECTIONS_FINALES.txt  CORRECTION_VISIBILITE.txt  DEMARRAGE_RAPIDE.txt  DEMARRER.bat  DEPLOIEMENT_RAPIDE.txt  FAVICON_CONFIGURATION.md  FICHIERS_CORRIGES.md  GUIDE_DEMARRAGE.md  GUIDE_DEPLOIEMENT_PYTHONANYWHERE.md  GUIDE_MAINTENANCE.md  GUIDE_MIGRATION_LOTS.md  IMPLEMENTATION_JOURNAL_ACTIVITES.md  IMPLEMENTATION_LOTS_COMPLETE.md  IMPLEMENTATION_PHARMASTOCK.md  INFORMATIONS_ENTREPRISE_AJOUTEES.md  INSTRUCTIONS_DEMARRAGE.md  INSTRUCTIONS_FINALES.md  INTEGRATION_COMPLETE_GUIDE.md  LANCER.bat  LANCER_APP.bat  LANCER_SIMPLE.bat  LAYOUT_FIXE_README.md  LICENSE  MULTI_PHARMACY_FEATURES.md  PAGES_A_ADAPTER.md  PAGES_BOOTSTRAP5_VS_ARGON.md  PAIEMENT_PARTIEL_FIX.md  PLAN_IMPLEMENTATION_MODULES_EXISTANTS.md  PRIX_ACHAT_ET_FORME_GUIDE.md  PROBLEME_RESOLU.txt  RAPPORT_FINAL_ANALYSE.md  (+32 more)
app/: __init__.py  config.py  decorators.py  export_utils.py  models.py  pharmacy_utils.py  validation_helper.py
app/helpers/: __init__.py  activity_logger.py
app/routes/: api_modals.py  approvals.py  audits.py  auth.py  cashier.py  credit_sales.py  customers.py  dashboard.py  evaluation.py  hr.py  notifications.py  payments.py  pharmacies.py  pos.py  products.py  proforma.py  reports.py  sales.py  settings.py  stock.py  suppliers.py  tasks.py  users.py  validation.py
(+123 files in other folders)
