[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask>=3.1.2",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "openpyxl>=3.1.5",
    "pillow>=11.3.0",
    "python-barcode>=0.16.1",
    "reportlab>=4.4.4",
    "werkzeug>=3.1.3",
]
